@@ -1,3 +1,7 @@
+2007-07-29  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* DocumentBuffer.cs: Minor Changes.
+
 2007-07-24  Hector E. Gomez M. <hectoregm@gmail.com> 
 
 	* Utils.cs, Monodoc.Editor.Gui.mdp: Added Utils.cs this will contain
